Improved update methods + added early batch gen

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,6 @@
-[DEFAULT]
+[CONFIG]
 PaperMCInstallLoc = ./paper_server
-ServerVersion = 1.17
+MinecraftVersion = 1.16.5
 OS = Unix
+# Server memory
+Memory = 4
