Created a Real Time Server Log with Websockets (releasing template for webpage soon.

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [CONFIG]
-PaperMCInstallLoc = ./paper_server
-MinecraftVersion = 1.17
+INSTALL_LOCATION = ./paper_server
+MINECRAFT_VERSION = 1.17.1
 OS = Unix
 # Server memory
-Memory = 4
+SERVER_MEMORY = 4
