--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,26 @@
+aniso8601==9.0.1
+bidict==0.21.2
 certifi==2021.5.30
 chardet==4.0.0
+click==8.0.1
+dnspython==1.16.0
+Flask==2.0.1
+Flask-Cors==3.0.10
+Flask-RESTful==0.3.9
+Flask-SocketIO==5.1.0
+gevent==21.1.2
+gevent-websocket==0.10.1
+greenlet==1.1.0
 idna==2.10
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+python-engineio==4.2.0
+python-socketio==5.3.0
+pytz==2021.1
 requests==2.25.1
+six==1.16.0
 urllib3==1.26.5
-Flask~=2.0.1
-Werkzeug~=2.0.1
-gevent~=21.1.2
+Werkzeug==2.0.1
+zope.event==4.5.0
+zope.interface==5.4.0
